--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,3 +1,3 @@
 elixir_version=1.12.3
 erlang_version=24.1.1
-hook_post_compile="eval mix assets.deploy && rm -f _build/esbuild"
+#hook_post_compile="eval mix assets.deploy && rm -f _build/esbuild"
